# apismedia_backend

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: .env_example  config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 6c253247ad0d_.py  fd78bf2f1fe7_.py
src/api/v1/: deps.py  router.py
src/api/v1/admin/: easyclinic.py  sync.py
src/api/v1/public/: branches.py  doctors.py  slots.py  specialties.py
src/core/: __init__.py  database.py  models.py
src/core/entities/: branches.py  doctor_documents.py  doctors.py  specialties.py
src/domain/branches/: branches_dal.py  branshes_bl.py
src/domain/specialties/: specialties_bl.py  specialties_dal.py
src/domain/synchron/: sync_bl.py  sync_dal.py
src/utils/: easyclinic.py  normalize.py  result.py
