[project]
name = "apismedia-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramzil",email = "yazik_2018@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
